
name:           hjc
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2012 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       A Haskell-to-JavaScript compiler
category:       Language
tested-with:    GHC == 7.4.1

Executable hjc
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    haskell2010 >= 1.1.0.1,
    ghc         >= 7.4.1,
    ghc-paths   >= 0.1.0.8

